kustomize/realblog/backend-deployment.yaml
# backend service
apiVersion: v1
kind: Service
metadata:
  name: realblog-api
  labels:
    app: realblog
spec:
  ports:
    - name: "realblog-api"
      port: 3000
      targetPort: 3000
  selector:
    app: realblog
    tier: backend
  type: LoadBalancer

---
# backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realblog-api
  labels:
    app: realblog
spec:
  selector:
    matchLabels:
      app: realblog
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: realblog
        tier: backend
    spec:
      containers:
        - image: blog-api:latest
          name: realblog
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: realblog
