kustomize/realblog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realblog-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: realblog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realblog-ui
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realblog-api
                port:
                  number: 3000
